--- a/home/private_dot_config/exact_lazygit/config.yml.tmpl
+++ b/home/private_dot_config/exact_lazygit/config.yml.tmpl
@@ -6,7 +6,7 @@ customCommands:
     loadingText: "opening commitizen commit tool"
     output: terminal
   - key: "G"
-    command: "kimi -y -q '根据当前git情况，生成一个符合conventional commit规范的commit'"
+    command: "git cz ai"
     description: "generate commit message"
     context: "files"
     loadingText: "opening commitizen commit tool"
