--- a/home/private_dot_config/exact_nvim/exact_lua/exact_plugins/minuet_ai.lua.tmpl
+++ b/home/private_dot_config/exact_nvim/exact_lua/exact_plugins/minuet_ai.lua.tmpl
@@ -67,7 +67,7 @@ return {
 					},
 					name = "openai",
 					api_key = "OPENAI_API_KEY",
-					end_point = "{{ .ai.endpoint | trimSuffix " / " }}/v1/chat/completions",
+					end_point = "{{ .ai.endpoint | trimSuffix " / " }}/chat/completions",
 				},
 			},
 		})
