chore(plugins): update VectorCode plugin dependencies

--- a/home/private_dot_config/exact_nvim/exact_lua/exact_plugins/minuet_ai.lua.tmpl
+++ b/home/private_dot_config/exact_nvim/exact_lua/exact_plugins/minuet_ai.lua.tmpl
@@ -6,7 +6,7 @@ return {
 		{
 			"Davidyz/VectorCode",
 			version = "*",
-			build = "uv tool install vectorcode", -- This helps keeping the CLI up-to-date
+			build = "uv tool install 'vectorcode[lsp,mcp]'", -- This helps keeping the CLI up-to-date
 		},
 	},
 	config = function()
