feat: based on the git diff, I can see that a new configuration option `model_reasoning_effort = "high"` has been added to the private_config.toml.tmpl file.add model reasoning effort configuration with high setting

--- a/home/dot_codex/private_config.toml.tmpl
+++ b/home/dot_codex/private_config.toml.tmpl
@@ -3,6 +3,7 @@ model_provider = "openai-chat-completions"
 approval_policy = "never"
 disable_response_storage = false
 hide_agent_reasoning = false
+model_reasoning_effort = "high"
 model_supports_reasoning_summaries = true
 sandbox_mode = "danger-full-access"
 
