--- a/home/private_dot_config/exact_nvim/exact_lua/exact_plugins/translate.lua.tmpl
+++ b/home/private_dot_config/exact_nvim/exact_lua/exact_plugins/translate.lua.tmpl
@@ -10,7 +10,7 @@ local function translate()
 				-- {{ end }}
 				"--data",
 				vim.json.encode({
-					["model"] = "{{ .ai.nothink_model }}",
+					["model"] = "{{ .ai.models.default }}",
 					["messages"] = {
 						{
 							["role"] = "system",
