feat(dotfiles): 添加.zshrc.local文件支持
添加对本地配置文件的动态加载支持，允许用户在不修改chezmoi托管文件的情况下添加自定义配置。
使用chezmoi模板语法检查并自动加载位于home目录下的.zshrc.local文件。

--- a/home/dot_zshrc.tmpl
+++ b/home/dot_zshrc.tmpl
@@ -26,6 +26,10 @@ plugins=(
 source $ZSH/oh-my-zsh.sh
 
 # User configuration
+{{ $local := joinPath .chezmoi.homeDir ".zshrc.local" -}}
+{{ if stat $local -}}
+source {{ $local }}
+{{ end -}}
 
 {{- if lookPath "nvim" }}
 alias vi=nvim
